# backdoor

./: .gitignore  README.md  memo.md  pyproject.toml  sbatch.sh
src/: client.py  fix_seed.py  main.py  model.py  plot_utils.py  sentinel.py  utils.py
test/: test_main.py  test_model.py  test_sentinel.py
