[project]
name = "backdoor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "nn>=0.1.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorflow>=2.14.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
